# aws_ec2_manager

./: README.md  pyproject.toml
aws_ec2_manager/: __main__.py  create_instance.py  group_instances.py  list_group_instances.py  list_members.py  security_group.py  stop_members.py  tag_instances.py
