[tool.poetry]
name = "aws_ec2_manager"
version = "23.3.3"
description = "Manage AWS EC2 instances with ease."
authors = ["Sayafdine Said <musikid@outlook.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = { extras = ["all"], version = "^0.7.0" }
boto3 = "^1.26.82"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pylint = "^2.16.2"
boto3-stubs = { extras = ["boto3", "ec2"], version = "^1.26.82" }

[tool.poetry.scripts]
aws_ec2_manager = "aws_ec2_manager.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
